--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "next": "15.3.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+     "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
