--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H 0.0.0.0",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,7 +14,7 @@
     "next": "15.3.2"
   },
   "devDependencies": {
-     "postcss": "^8",
+    "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
 }
