--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "node -e \"require('child_process').spawn('node_modules/.bin/next', ['start', '-H', '0.0.0.0', '-p', process.env.PORT || 3000], {stdio:'inherit'})\"",
+    "start": "next start -H 0.0.0.0",
     "lint": "next lint"
   },
   "dependencies": {
